test/neg/bug72.scala
import scala.collection.mutable._;

object Composites {
    def main(args: Array[String]) = {
        val weekDays : Set[String] = Set("Mon", "Tue", "Wed", "Thu", "Fri");
    }
}
